[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pytelegrambotapi>=4.26.0",
    "schedule>=1.2.2",
    "telegram>=0.0.1",
    "twilio>=9.4.3",
]
